--- a/jswork/htmlwork/day0206/myPortFolio.html
+++ b/jswork/htmlwork/day0206/myPortFolio.html
@@ -59,10 +59,34 @@
             <th width="200">기 간</th>
             <th width="150">기타</th>
         </tr>
-        <tr><td></td><td></td><td></td><td></td><td align="center">□인문 □자연 □실업</td></tr>
-        <tr><td></td><td></td><td></td><td></td><td align="center">□수료 □졸업 □예정</td></tr>
-        <tr><td></td><td></td><td></td><td></td><td align="center">□수료 □졸업 □예정</td></tr>
-        <tr><td></td><td></td><td></td><td></td><td align="center">□수료 □졸업 □예정</td></tr>
+        <tr><td></td><td></td><td></td><td></td>
+            <td align="center"><input type="checkbox" id="checkbox1" name="checkbox1">
+            <label for="checkbox1">인문</label>
+            <input type="checkbox" id="checkbox2" name="checkbox2">
+            <label for="checkbox2">자연</label>
+            <input type="checkbox" id="checkbox3" name="checkbox3">
+            <label for="checkbox3">실업</label></td></tr>
+        <tr><td></td><td></td><td></td><td></td>
+            <td align="center"><input type="checkbox" id="checkbox1" name="checkbox1">
+            <label for="checkbox1">수료</label>
+            <input type="checkbox" id="checkbox2" name="checkbox2">
+            <label for="checkbox2">졸업</label>
+            <input type="checkbox" id="checkbox3" name="checkbox3">
+            <label for="checkbox3">예정</label></td></tr>
+        <tr><td></td><td></td><td></td><td></td>
+            <td align="center"><input type="checkbox" id="checkbox1" name="checkbox1">
+            <label for="checkbox1">수료</label>
+            <input type="checkbox" id="checkbox2" name="checkbox2">
+            <label for="checkbox2">졸업</label>
+            <input type="checkbox" id="checkbox3" name="checkbox3">
+            <label for="checkbox3">예정</label></td></tr>
+        <tr><td></td><td></td><td></td><td></td>
+            <td align="center"><input type="checkbox" id="checkbox1" name="checkbox1">
+            <label for="checkbox1">수료</label>
+            <input type="checkbox" id="checkbox2" name="checkbox2">
+            <label for="checkbox2">졸업</label>
+            <input type="checkbox" id="checkbox3" name="checkbox3">
+            <label for="checkbox3">예정</label></td></tr>
     </table>
 
     <br>
