--- a/jswork/JSQUERWORK/day0214/quizFormTag.html
+++ b/jswork/JSQUERWORK/day0214/quizFormTag.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Gaegu&family=Nanum+Myeongjo&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Document</title>
     <style>
-        table{
-            border-collapse: collapse;
-            width: 500px;
-            border: 3px solid gray;
-        }
-        th,td{
-            border: 1px solid gray;
-        }
+
 
         #result{
             font-family: Nanum Myeongjo;
@@ -53,33 +47,35 @@
                 var languages=document.getElementsByName("lang");
                 s+="가능언어: ";
                 for(var i=0;i<languages.length;i++){
-                    if(languages[i].checked){
+                    if(languages[i].checked){ //체크일경우 true,아닐경우 false
                         s+=languages[i].value+" ";
                     }
                 }
                 s+="<br>";
 
+                //입력한 입사일자 추가
                 var hireDate=document.getElementById("ipsa").value;
                 s+="입사일자: "+hireDate+"<br>";                
 
+                //결과출력 하는 곳에 정보들을 모은 s 출력
                 document.getElementById("result").innerHTML=s;
             }
         }
     </script>
 </head>
 <body>
-    <form>
-        <table>
+    <form name="frm">
+        <table class="table table-bordered" style="width: 500px;">
             <caption><b>폼태그 과제_개인정보</b></caption>
             <tr>
-                <th>이름</th>
+                <th class="table-primary">이름</th>
                 <td>
-                    <input type="text" id="name" size="10" placeholder="이름">
+                    <input type="text" id="name" placeholder="이름" class="form-control" style="width: 120px;">
                 </td>
             </tr>
 
             <tr>
-                <th>비밀번호</th>
+                <th class="table-info">비밀번호</th>
                 <td>
                     <input type="password" id="password" size="12" placeholder="비밀번호">
                 </td>
@@ -114,7 +110,7 @@
 
             <tr>
                 <td colspan="2" align="center">
-                    <input type="button" id="btnResult" value="결과출력">
+                    <input type="button" id="btnResult" value="결과출력" class="btn btn-warning">
                 </td>
             </tr>
         </table>
